# parserc

./: CHANGELOG.md  Cargo.toml  README.md
benches/: parsers.rs
core/: Cargo.toml
core/src/: errors.rs  input.rs  inputs.rs  lang.rs  lib.rs  parser.rs  span.rs  syntax.rs
core/tests/: syntax.rs
derive/: Cargo.toml
derive/src/: lib.rs  syntax.rs  token.rs  tuple.rs
src/: errors.rs  input.rs  inputs.rs  lib.rs  parse.rs  parser.rs
tests/: derive_test.rs
