[package]
description = "Rust parser combinator framework for small languages."
documentation = "https://docs.rs/parserc"
edition = "2024"
license = "MIT"
name = "parserc"
repository = "https://github.com/styles-lab/parserc"
version = "0.4.2"

[dependencies]
log = {version = "^0.4", features = ["kv"]}
memchr = "^2.7"
serde = {version = "^1", features = ["derive"], optional = true}
thiserror = "^2"
[dev-dependencies]
divan = "0.1.17"

[features]
default = ["serde"]
serde = ["dep:serde", "log/kv_serde"]

[[bench]]
harness = false
name = "parsers"
