[package]
description = "Rust parser combinator framework for small languages."
documentation = "https://docs.rs/parserc"
edition = "2024"
license = "MIT"
name = "parserc"
repository = "https://github.com/styles-lab/parserc"
version = "0.7.4"

[dependencies]
memchr = "^2.7"
parserc-derive = { version = "^0.1", path = "./derive", optional = true }
serde = { version = "^1", features = ["derive"], optional = true }
thiserror = "^2"

[dev-dependencies]
divan = "0.1.17"

[features]
default = ["serde", "derive"]
derive = ["parserc-derive"]
serde = ["dep:serde"]

[[bench]]
harness = false
name = "parsers"
